packages/svelte/tests/validator/samples/snippet-already-declared/input.svelte
<script>
	let foo = 'bar';
</script>

{#snippet foo()}baz{/snippet}
