packages/svelte/tests/compiler-errors/samples/slot-conflicting-with-render-tag/main.svelte
<script>
	let { children } = $props();
</script>

{@render children()}
<slot></slot>
